# flutter_hev5socks

./: README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
flutter_hev5socks/: CMakeLists.txt  pubspec.yaml  vpnclient_driver.mmd
flutter_hev5socks/include/: hev_socks5_c_api.h  socks5.h  tap_device.h  tun_device.h  vpnclient_driver.h
flutter_hev5socks/lib/: flutter_vpn_hev5socks.dart
flutter_hev5socks/lib/src/: hev_socks5.dart
flutter_hev5socks/lib/src/models/: hev_socks5_config.dart  hev_socks5_stats.dart
flutter_hev5socks/src/core/: driver.c  hev_socks5_c_api.c  socks5.c
flutter_hev5socks/src/platform/android/: tun_device.jni
flutter_hev5socks/src/platform/ios/: tun_device.swift
flutter_hev5socks/src/platform/linux/: tun_device.c
flutter_hev5socks/src/platform/macos/: tun_device.c
flutter_hev5socks/src/platform/windows/: tap_device.c
include/: hev_socks5_c_api.h
lib/: flutter_vpn_hev5socks.dart
lib/src/: hev_socks5.dart
lib/src/models/: hev_socks5_config.dart  hev_socks5_stats.dart
src/core/: hev_socks5_c_api.c
